tests/specs/run/ld_preload/env_arg.out
<<<<<<< HEAD
NotCapable: Requires --allow-all permissions to spawn subprocess with LD_PRELOAD environment variable.
    [WILDCARD]
  name: "NotCapable"
}
NotCapable: Requires --allow-all permissions to spawn subprocess with LD_PRELOAD environment variable.
    [WILDCARD]
  name: "NotCapable"
}
=======
error: Uncaught (in promise) NotCapable: Requires --allow-all permissions to spawn subprocess with LD_PRELOAD environment variable.
}).spawn();
   ^
    at [WILDCARD]
>>>>>>> 7c0b9992f (feat(cli): use NotCapable error for permission errors)
